added release details to build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,36 @@ dependencies {
     compile 'de.michaelzinn.ravr:ravr:0.0.11'
     compile("io.vavr:vavr-jackson:0.9.0")
 }
+
+// release related
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+apply plugin: 'maven-publish'
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+            pom.withXml {
+                asNode().dependencies.'*'.findAll() {
+                    it.scope.text() == 'runtime' && project.configurations.compile.allDependencies.find { dep ->
+                        dep.name == it.artifactId.text()
+                    }
+                }.each() {
+                    it.scope*.value = 'compile'
+                }
+            }
+        }
+    }
+}
+
+model {
+    tasks.generatePomFileForMavenPublication {
+        destination = file("$buildDir/libs/ouroboros-0.0.1.pom")
+    }
+}
+
